fix svg on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -119,6 +119,7 @@
   text-decoration: none;
 
   & svg {
+    width: max-content;
     fill: var(--color-text);
   }
 
